--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,15 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mailgen": "^2.0.27",
+    "mongodb": "^5.8.1",
     "mongodb-memory-server": "^8.15.1",
-    "mongoose": "^7.4.4",
+    "mongoose": "^6.12.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.1"
+    "nodemailer": "^6.9.4",
+    "nodemon": "^2.0.22",
+    "otp-generator": "^4.0.1"
   }
 }
